# my-clis

sfapi-cli/: pyproject.toml
sfapi-cli/sfapi_cli/: sfapi.py
